Markdown wrap fix

--- a/assets/css/markdown.css
+++ b/assets/css/markdown.css
@@ -26,8 +26,15 @@
   @apply text-blue-600 dark:text-blue-400;
 }
 
+.markdown p,
+.markdown li,
+.markdown div,
+.markdown pre {
+  @apply flex flex-wrap;
+}
+
 .markdown p {
-  @apply py-1 mb-3 flex flex-wrap;
+  @apply py-1 mb-3;
 }
 
 .markdown ol {
